draft signup box

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -62,3 +62,4 @@ hr {
 @import 'components/skip-link';
 @import 'components/syntax-highlighting';
 @import 'components/video-player';
+@import 'components/_signup-form.scss';
