--- a/src/scss/components/_site-head.scss
+++ b/src/scss/components/_site-head.scss
@@ -10,6 +10,7 @@
   }
   &__text svg{
     height: 2em;
+    max-width: map-get($metrics, 'wrap-max-width');
   }
   &__text path {
     fill: var(--color-text);
