--- a/src/_includes/partials/components/signup-form.njk
+++ b/src/_includes/partials/components/signup-form.njk
@@ -1,8 +1,8 @@
- <div class="signup">
-    <form action="#" class="signup__form flow">
-        <label for="email">Sign up for email updates</label>
-        <div class="inline-field-control">
-            <input type="email" name="email" id="email" autocapitalize="none" autocorrect="off" cursor: auto; aria-invalid="false">
+ <div class="signup pad-bottom-900">
+    <form action="/thank-you" class="signup__form flow"  method="POST" data-netlify="true">
+        <label class="text-600"for="email">Sign up for email updates</label>
+        <div class="inline-field-control text-600">
+            <input type="email" name="email" id="email" autocapitalize="none" autocorrect="off" required="" pattern="[^@]+@[^\.]+\..+" placeholder="you_are@awesome.com">
             <button class="button">
                 <span class="visually-hidden">Submit email</span>
                 <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" width="1em" height="1em" viewBox="0 0 24 24">
@@ -11,7 +11,7 @@
             </button>
         </div>
     </form>
-    <div class="signup__alert" aria-atomic="true"role="alert"> 
+    <div class="visually-hidden signup__alert flow" aria-atomic="true"role="alert"> 
         <figure class="alert" data-state="error">
           <svg class="alert__icon" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" width="1em" height="1em" viewBox="0 0 24 24">
       <path fill="currentColor" d="M11.148 4.374a.973.973 0 01.334-.332c.236-.143.506-.178.756-.116s.474.216.614.448l8.466 14.133a.994.994 0 01-.155 1.192.99.99 0 01-.693.301H3.533a.997.997 0 01-.855-1.486zM9.432 3.346l-8.47 14.14c-.422.731-.506 1.55-.308 2.29s.68 1.408 1.398 1.822c.464.268.976.4 1.475.402H20.47a3 3 0 002.572-4.507L14.568 3.346a2.995 2.995 0 00-4.123-1.014c-.429.26-.775.615-1.012 1.014zM11 9v4a1 1 0 002 0V9a1 1 0 00-2 0zm2 8a1 1 0 10-2 0 1 1 0 002 0z"></path>
