--- a/src/scss/components/_signup-form.scss
+++ b/src/scss/components/_signup-form.scss
@@ -1,3 +1,4 @@
+
 .flow {
     --flow-space: 1em;
 }
@@ -5,13 +6,13 @@
     max-width: 22rem;
     margin: 2em auto 0 auto;
 
-    &__form {
-
+    &__form + .signup__alert {
+        --flow-space: 1em;
     }
 
     & .button {
-        background: linear-gradient(45deg,var(--color-primary-glare),var(--color-theme-feature-text));
-        color: var(--color-dark);
+        background: linear-gradient(45deg,var(--color-primary-glare),var(--color-highlight));
+        color: var(--color-bg);
         font-size: 1.6rem;
         min-width: 3.5rem;
         cursor: pointer;
@@ -19,9 +20,9 @@
 }
 
 label {
-    color: var(--color-highlight);
+    color: var(--color-text);
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 400;
 }
 
 .inline-field-control {
@@ -33,4 +34,14 @@ label {
 .inline-field-control input {
     flex: auto;
     border-right: 1px solid var(--color-tertiary);
+}
+
+button, input[type] {
+    border: none;
+    border-radius: 0;
+    margin: 0;
+    font: inherit;
+    line-height: 1;
+    padding: .8rem;
+    caret-color: var(--color-primary-glare);
 }
