--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -19,6 +19,7 @@
   --color-theme-primary-glare: #{get-color('primary-glare')};
   --color-theme-highlight: #{get-color('highlight')};
   --color-theme-highlight-block: #{get-color('highlight')};
+  --color-theme-feature-text: #{get-color('primary-shade')};
   --heading-fill-color: #{get-color('primary-shade')};
 
 
