--- a/src/scss/components/_signup-form.scss
+++ b/src/scss/components/_signup-form.scss
@@ -2,44 +2,95 @@
 .flow {
     --flow-space: 1em;
 }
-.signup {
-    max-width: 22rem;
-    margin: 2em auto 0 auto;
-
-    &__form + .signup__alert {
-        --flow-space: 1em;
+.subscribe {
+    display:grid;
+    background-color: var(--color-theme-highlight-block);
+    // color:var(--color-light);
+    grid-template-columns: 1fr 1fr;
+    // grid-template-rows: 1fr 6fr;
+    // column-gap: 2.4rem;
+    max-width: 35rem;
+    margin: 2em auto 4em auto;
+    font-size: 1rem;
+    
+    &__heading {
+        grid-column: 1 / 3;
+        // grid-row: 1 / 2;
+        // font-size: 2em;
     }
 
-    & .button {
-        background: linear-gradient(45deg,var(--color-primary-glare),var(--color-highlight));
-        color: var(--color-bg);
+    &__pretty {
+        grid-column: 1 / 2;
+        // grid-row: 2 / 3;
+        padding: 1em 1em;
+    }
+
+    &__form {
+        grid-column: 2 / 3;
+        // grid-row: 2 / 3;
+        padding: 3em 1em;
+    }
+
+    & img {
+        margin-top: 1.6em;
+        
+    margin: 1.6em;
+    }
+
+    & h1, p {
+        text-align: center;
+    }
+
+    & h1 {
         font-size: 1.6rem;
-        min-width: 3.5rem;
+        margin-bottom: 1rem;
+    }
+
+    & p, label {
+        font-size: 1rem;
+    }
+
+    // &__form + .signup__alert {
+    //     --flow-space: 1em;
+    // }
+
+    & .button {
+        background: var(--color-theme-feature-text);
+        color: var(--color-theme-highlight-block);
+        font-weight: 600;
+        font-size: 2.2rem;
+        // margin: .6em;
+        margin-bottom: .6em;
+        border-radius: .4rem;
+        width: 100%;
         cursor: pointer;
     }
 }
 
 label {
-    color: var(--color-text);
-    text-transform: uppercase;
-    font-weight: 400;
+    // color: var(--color-light);
+
+    // text-transform: uppercase;
+    // font-weight: 400;
 }
 
 .inline-field-control {
-    --flow-space: 0.5rem;
-    display: flex;
-    border: 1px solid var(--color-tertiary);
+    --flow-space: 0.5rem;   
+    display: inline-block;
+    font-size: 1.2rem;
+    // border: 1px solid var(--color-primary-glare);
 }
 
 .inline-field-control input {
-    flex: auto;
-    border-right: 1px solid var(--color-tertiary);
+    // flex: auto;
+    border-right: 1px solid var(--color-primary-glare);
+    margin-bottom: 1.8em;
 }
 
 button, input[type] {
     border: none;
     border-radius: 0;
-    margin: 0;
+    // margin: 0;
     font: inherit;
     line-height: 1;
     padding: .8rem;
