--- a/src/_includes/partials/components/signup-form.njk
+++ b/src/_includes/partials/components/signup-form.njk
@@ -4,27 +4,20 @@
     	    <h1 class="subscribe__heading text-500">Subscribe to the Flexion Newsletter</h1>
     	<p>Subscribe to get our latest content via email.</p>
         <img class="gap-top-700" src="/images/flexion-email.svg" alt="mail icon with flexion logo">
-        
+        <p>RSS feed also available.</p>
     </div>
-    <form action="/thank-you" class="subscribe__form flow"  method="POST" data-netlify="true">
+    <form action="pages/thank-you" class="subscribe__form"  method="POST" data-netlify="true">
         <div class="inline-field-control">
             <label for="name">Name</label>
-            <input type="text" name="name" id="name" autocapitalize="words" autocorrect="off" required="true" placeholder="Hello">
+            <div class="input_background">
+                <input type="text" name="name" id="name" autocapitalize="words" autocorrect="off" required="true" placeholder="Hello">
+            </div>
             <label for="email">Email address</label>
-            <input type="email" name="email" id="email" autocapitalize="none" autocorrect="off" required="true" pattern="[^@]+@[^\.]+\..+" placeholder="you_are@awesome.com">
-            <button class="button margin-top-300">Subscribe</button>
+            <div class="input_background">
+                <input type="email" name="email" id="email" autocapitalize="none" autocorrect="off" required="true" pattern="[^@]+@[^\.]+\..+" placeholder="you_are@awesome.com">
+            </div>
+            <button type="submit" class="button margin-top-300">Subscribe</button>
             <p>We will not spam you. </p> <p>Un-subscribe at any time with a single click.</p>
         </div>
     </form>
-    <div class="visually-hidden signup__alert flow" aria-atomic="true"role="alert"> 
-        <figure class="alert" data-state="error">
-          <svg class="alert__icon" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" width="1em" height="1em" viewBox="0 0 24 24">
-      <path fill="currentColor" d="M11.148 4.374a.973.973 0 01.334-.332c.236-.143.506-.178.756-.116s.474.216.614.448l8.466 14.133a.994.994 0 01-.155 1.192.99.99 0 01-.693.301H3.533a.997.997 0 01-.855-1.486zM9.432 3.346l-8.47 14.14c-.422.731-.506 1.55-.308 2.29s.68 1.408 1.398 1.822c.464.268.976.4 1.475.402H20.47a3 3 0 002.572-4.507L14.568 3.346a2.995 2.995 0 00-4.123-1.014c-.429.26-.775.615-1.012 1.014zM11 9v4a1 1 0 002 0V9a1 1 0 00-2 0zm2 8a1 1 0 10-2 0 1 1 0 002 0z"></path>
-    </svg>
-            <p class="alert__content">
-                <b>Please use a valid email.</b>
-                like: name@email.com
-            </p>
-        </figure>
-    </div>
 </div>
