--- a/src/scss/components/_signup-form.scss
+++ b/src/scss/components/_signup-form.scss
@@ -32,9 +32,7 @@
     }
 
     & img {
-        margin-top: 1.6em;
-        
-    margin: 1.6em;
+        margin: 1.6em;
     }
 
     & h1, p {
@@ -54,6 +52,13 @@
     //     --flow-space: 1em;
     // }
 
+    & .inline-field-control {
+        --flow-space: 0.5rem;   
+        display: inline-block;
+        font-size: 1.2rem;
+        // border: 1px solid var(--color-primary-glare);
+    }
+
     & .button {
         background: var(--color-theme-feature-text);
         color: var(--color-theme-highlight-block);
@@ -65,34 +70,38 @@
         width: 100%;
         cursor: pointer;
     }
+
+    & .input_background {
+        background: var(--color-bg);
+        border-radius: .8em;
+        margin-bottom: 1.8em;
+
+    }
+    & button, input[type] {
+        border: none;
+        // margin: 0;
+        font: inherit;
+        line-height: 1;
+        padding: .8rem;
+        caret-color: var(--color-primary-glare);
+    }
+
+    & input {
+        background:none;
+        color: var(--color-text);
+    }
+
+    & input:focus:invalid {
+        background: url("/images/invalid.svg") no-repeat 95% 50%;
+        background-size: 45px;
+      }
+
+    & input:required:focus:valid {
+        background: url("/images/valid.svg") no-repeat 95% 50%;
+        background-size: 50px;
+      }
+    
 }
 
-label {
-    // color: var(--color-light);
 
-    // text-transform: uppercase;
-    // font-weight: 400;
-}
 
-.inline-field-control {
-    --flow-space: 0.5rem;   
-    display: inline-block;
-    font-size: 1.2rem;
-    // border: 1px solid var(--color-primary-glare);
-}
-
-.inline-field-control input {
-    // flex: auto;
-    border-right: 1px solid var(--color-primary-glare);
-    margin-bottom: 1.8em;
-}
-
-button, input[type] {
-    border: none;
-    border-radius: 0;
-    // margin: 0;
-    font: inherit;
-    line-height: 1;
-    padding: .8rem;
-    caret-color: var(--color-primary-glare);
-}
