update to avoid redirect error

--- a/src/_includes/partials/components/signup-form.njk
+++ b/src/_includes/partials/components/signup-form.njk
@@ -6,7 +6,7 @@
         <img class="gap-top-700" src="/images/flexion-email.svg" alt="mail icon with flexion logo">
         <p>RSS feed also available.</p>
     </div>
-    <form action="pages/thank-you" class="subscribe__form"  method="POST" data-netlify="true">
+    <form action="/thank-you" class="subscribe__form"  method="POST" data-netlify="true">
         <div class="inline-field-control">
             <label for="name">Name</label>
             <div class="input_background">
