stop build failing

--- a/src/_includes/partials/global/site-foot.njk
+++ b/src/_includes/partials/global/site-foot.njk
@@ -1,5 +1,5 @@
 {# update later to actual setting #}
-  {% if  %}
+  {% if site.shortDesc %}
      {% include "partials/components/signup-form.njk" %}
   {% endif %}
 
