--- a/src/_includes/partials/components/signup-form.njk
+++ b/src/_includes/partials/components/signup-form.njk
@@ -6,7 +6,7 @@
         <img class="gap-top-700" src="/images/flexion-email.svg" alt="mail icon with flexion logo">
         <p>RSS feed also available.</p>
     </div>
-    <form name="subscribe" action="/thank-you" class="subscribe__form"  method="POST" data-netlify="true">
+    <form name="subscribe" action="/thank-you.html" class="subscribe__form"  method="POST" data-netlify-recaptcha="true" data-netlify="true">
         <div class="inline-field-control">
             <label for="name">Name</label>
             <div class="input_background">
@@ -16,6 +16,7 @@
             <div class="input_background">
                 <input type="email" name="email" id="email" autocapitalize="none" autocorrect="off" required="true" pattern="[^@]+@[^\.]+\..+" placeholder="you_are@awesome.com">
             </div>
+            <div data-netlify-recaptcha="true"></div>
             <button type="submit" class="button margin-top-300">Subscribe</button>
             <p>We will not spam you. </p> <p>Un-subscribe at any time with a single click.</p>
         </div>
