--- a/src/_includes/partials/components/signup-form.njk
+++ b/src/_includes/partials/components/signup-form.njk
@@ -1,5 +1,4 @@
  <div class="subscribe">
-
     <div class="subscribe__pretty">
     	    <h1 class="subscribe__heading text-500">Subscribe to the Flexion Newsletter</h1>
     	<p>Subscribe to get our latest content via email.</p>
@@ -19,6 +18,12 @@
             <div data-netlify-recaptcha="true"></div>
             <button type="submit" class="button margin-top-300">Subscribe</button>
             <p>We will not spam you. </p> <p>Un-subscribe at any time with a single click.</p>
+        </div>
+        <div class="thank-you visually-hidden">
+        <h1 class="subscribe__heading">Thank you</h1>
+        <p>Thanks for subscribing. It is really appreciated.</p>
+        <p>We will drop you an email soon. please check your inbox or your spam filter for an email from us.</p>
+        <img src="/images/thank-you-present.svg" alt="flexion present icon">
         </div>
     </form>
 </div>
