--- a/src/_includes/partials/components/nav.njk
+++ b/src/_includes/partials/components/nav.njk
@@ -1,6 +1,6 @@
 {% if navigation.items %}
   <nav class="nav">
-    <ul class="[ nav__list ] [ box-flex align-center md:space-before ]">
+    <ul class="[ nav__list ]">
       {% for item in navigation.items %}
         {% set relAttribute = '' %}
         {% set currentAttribute = '' %}
