--- a/src/scss/components/_site-head.scss
+++ b/src/scss/components/_site-head.scss
@@ -1,24 +1,58 @@
 .site-head {
+
+  &__inner{
+    display:grid;
+    row-gap: 1em;
+    column-gap: 3em;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 2fr;
+    align-items: center;
+    grid-template-areas: 
+    "name name"
+    "logo nav";
+  }
+
   &__site-name {
+    grid-area:name;
+  }
+
+  &__site-name .text {
     font-weight: 700;
     text-decoration: none;
     color: var(--color-text);
     
   }
-  &__logo {
-    height: 5em;
+  &__site-logo {
+    grid-area:logo;
+    min-height: 2em;
   }
-  &__text svg{
-    height: 2em;
-    max-width: map-get($metrics, 'wrap-max-width');
-  }
-  &__text path {
+  // & .svgtext .svg {
+  //   // max-height: 2em;
+  //   max-width: 100vh;
+  // }
+  & .svgtext path {
     fill: var(--color-text);
   }
 
-  &__logoSVG {
-    fill: var(--color-highlight);
+  &__logo {
+    min-height: .5em;
+  }
+    & nav {
+      grid-area: nav;
+    }
+  
+}
+
+
+@media (min-width: 768px) {
+.site-head {
+  
+  &__inner {
+    grid-template-columns: 1fr 4fr 2fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: 
+    "logo name nav";
   }
 
-  
+}
 }
