disable 3rd party comments

--- a/src/_includes/partials/components/signup-form.njk
+++ b/src/_includes/partials/components/signup-form.njk
@@ -14,7 +14,7 @@
         <div class="inline-field-control">
             <label for="name">Name</label>
             <div class="input_background">
-                <input class="validity_margin"  type="text" name="name" id="name" autocapitalize="words" autocorrect="off" required="true" placeholder="Hello" pattern="^\w+( +\w+)*$">
+                <input class="validity_margin"  type="text" name="name" id="name" autocapitalize="words" autocorrect="off" required="true" placeholder="Hello" pattern="^[a-zA-Z]([\w -]*[a-zA-Z])?$">
             </div>
             <label for="last-name" class="visually-hidden"></label>
             <input type="hidden" class="visually-hidden" name="last-name">
