--- a/src/_includes/partials/components/signup-form.njk
+++ b/src/_includes/partials/components/signup-form.njk
@@ -6,6 +6,7 @@
         <p>RSS feed also available.</p>
     </div>
     <form 
+    id="subscribe"
     name="subscribe"
     class="subscribe__form"  
     method="POST" 
