update to function

--- a/src/_includes/partials/components/signup-form.njk
+++ b/src/_includes/partials/components/signup-form.njk
@@ -1,4 +1,4 @@
- <div class="subscribe">
+ <div id="subscribe" class="subscribe">
     <div class="subscribe__pretty">
     	    <h1 class="subscribe__heading text-500">Subscribe to the Flexion Newsletter</h1>
     	<p>Subscribe to get our latest content via email.</p>
