updating thank-you page

--- a/src/_includes/partials/components/signup-form.njk
+++ b/src/_includes/partials/components/signup-form.njk
@@ -30,9 +30,9 @@
     </div>
     <div class="thank-you visually-hidden">
             <h1 class="subscribe__heading">Thank you</h1>
-                <p>Thanks for subscribing. It is really appreciated.</p>
+                <p>Thanks for subscribing.</p>
                 <img src="/images/thank-you-present.svg" alt="flexion present icon">
-                <p>We will drop you an email soon. please check your inbox or your spam filter for an email from us.</p>
+                <p>We have just tried sent you an email. Please check your email and spam filter for the email. </p>
     
 </div>
 </div>
