--- a/src/_includes/partials/components/signup-form.njk
+++ b/src/_includes/partials/components/signup-form.njk
@@ -32,7 +32,7 @@
             <h1 class="subscribe__heading">Thank you</h1>
                 <p>Thanks for subscribing.</p>
                 <img src="/images/thank-you-present.svg" alt="flexion present icon">
-                <p>We have just tried sent you an email. Please check your email and spam filter for the email. </p>
+                <p>We have just sent you an email. Please check your email and spam filter and add us to your contacts to receive updates right to your inbox! </p>
     
 </div>
 </div>
