--- a/src/_includes/partials/components/signup-form.njk
+++ b/src/_includes/partials/components/signup-form.njk
@@ -3,7 +3,7 @@
     	    <h1 class="subscribe__heading text-500">Subscribe to the Flexion Newsletter</h1>
     	<p>Subscribe to get our latest content via email.</p>
         <img class="gap-top-700" src="/images/flexion-email.svg" alt="mail icon with flexion logo">
-        <p>RSS feed also available.</p>
+        <p><a href="./feed.xml">RSS feed also available.</a></p>
     </div>
     <div class="[ subscribe__form ]">
     <form 
