updating default values in sign up form

--- a/src/_includes/partials/components/signup-form.njk
+++ b/src/_includes/partials/components/signup-form.njk
@@ -15,13 +15,13 @@
     netlify-honeypot="last-name">
             <label for="first-name">Name</label>
             <div class="input_background">
-                <input class="validity_margin"  type="text" name="first-name" id="first-name" autocapitalize="words" autocorrect="off" required="true" placeholder="Hello" pattern="^[a-zA-Z]([\w -]*[a-zA-Z])?$">
+                <input class="validity_margin"  type="text" name="first-name" id="first-name" autocapitalize="words" autocorrect="off" required="true" placeholder="First name will do" pattern="^[a-zA-Z]([\w -]*[a-zA-Z])?$">
             </div>
             <label for="last-name" class="visually-hidden"></label>
             <input type="hidden" class="visually-hidden" name="last-name">
             <label for="email">Email address</label>
             <div class="input_background">
-                <input class="validity_margin" type="email" name="email" id="email" autocapitalize="none" autocorrect="off" required="true" pattern="[^@]+@[^\.]+\..+" placeholder="you_are@awesome.com">
+                <input class="validity_margin" type="email" name="email" id="email" autocapitalize="none" autocorrect="off" required="true" pattern="[^@]+@[^\.]+\..+" placeholder="example@flexion.tech">
             </div>
             <button type="submit" class="button margin-top-300">Subscribe</button>
             <p>We will not spam you. </p> <p>Un-subscribe at any time with a single click.</p>
