make it prettier...

--- a/src/scss/components/_signup-form.scss
+++ b/src/scss/components/_signup-form.scss
@@ -17,6 +17,7 @@
         grid-column: 1 / 2;
         grid-row: 1 / 2;
         padding: 1em 1em;
+        background-color: #ffffff22;
     }
     &__form, .thank-you{
         grid-column: 1 / 2;
