left right classes to alow alignment of img

--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -103,6 +103,19 @@
       position: relative;
       z-index: 1;
     }
+    
+    img {
+      display:block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    img.left {
+      margin-left:get-size(800);
+    }
+    img.right {
+      margin-right:get-size(800);
+    }
 
     figcaption {
       font-size: 0.8em;
