--- a/src/scss/components/_signup-form.scss
+++ b/src/scss/components/_signup-form.scss
@@ -23,7 +23,7 @@
         grid-column: 1 / 2;
         grid-row: 2 / 3;
         padding: 3em 1em;
-        margin: .1em auto 1em auto;
+        margin: 1em;
     }
 
     & img {
@@ -90,18 +90,29 @@
 
     & input {
         background:none;
-        width: 113%;
+        width: 115%; //mozilla 
+        border-radius: .8em;
         color: var(--color-text);
+    }
+
+    & input:focus {
+        box-shadow: 1px 1px 2px 1px var(--color-text);
+        outline: none;
+        border-radius: .8em;
     }
 
     & input:focus:invalid {
         background: url("/images/invalid.svg") no-repeat 0% 50%;
         background-size: 2em;
       }
-
+    // & input:required:invalid {
+    //     box-shadow: 0px 0px 3px 1px red;
+    //     border-radius: .5em;
+    // }
     & input:required:focus:valid {
         background: url("/images/valid.svg") no-repeat 0% 50%;
         background-size: 2em;
+        
       }
     
 }
@@ -111,7 +122,7 @@
 .subscribe {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
-    column-gap: 2em;
+    // column-gap: 2em;
     max-width: 35rem;
     margin: 2em auto 4em auto;
     font-size: 1rem;
@@ -119,19 +130,13 @@
     &__pretty {
         grid-column: 1 / 2;
         grid-row: 1 / 2;
-        padding: 1em 1em;
+        // padding: 1em 1em;
     }
 
     &__form, .thank-you {
         grid-column: 2 / 3;
          grid-row: 1 / 2;
-        padding: 3em 1em;
-    }
-
-    & input {
-        background:none;
-        width: 118%;
-        color: var(--color-text);
+        // padding: 1em;
     }
 
     }
