--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -67,3 +67,4 @@ a {
 @import 'components/syntax-highlighting';
 @import 'components/video-player';
 @import 'components/_signup-form.scss';
+@import 'components/_zoom.scss';
