adding css to master to stop netlify CMS issues

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -66,4 +66,5 @@ a {
 @import 'components/skip-link';
 @import 'components/syntax-highlighting';
 @import 'components/video-player';
+@import 'components/_zoom.scss';
 @import 'components/_signup-form.scss';
