--- a/src/scss/components/_signup-form.scss
+++ b/src/scss/components/_signup-form.scss
@@ -53,69 +53,67 @@
         font-size: 1.2rem;
         // border: 1px solid var(--color-primary-glare);
     }
-
-    & .button {
-        background: var(--color-theme-feature-text);
-        color: var(--color-theme-highlight-block);
-        font-weight: 600;
-        font-size: 2.2rem;
-        // margin: .6em;
-        margin-bottom: .6em;
-        border-radius: .4rem;
-        width: 100%;
-        cursor: pointer;
-    }
-
-    & .input_background {
-        background: var(--color-bg);
-        border-radius: .8em;
-        margin-bottom: 1.8em;
-
-    }
-    & button, input[type] {
-        border: none;
-        // margin: 0;
-        font: inherit;
-        line-height: 1;
-        padding-top: .8rem;
-        padding-bottom: .8rem;
-
-        caret-color: var(--color-primary-glare);
-    }
-
-    & .validity_margin {
-        margin-left:-2em;
-        padding-left: 2.5em;
-    }
-
-    & input {
-        background:none;
-        width: 115%; //mozilla 
-        border-radius: .8em;
-        color: var(--color-text);
-    }
-
-    & input:focus {
-        box-shadow: 1px 1px 2px 1px var(--color-text);
-        outline: none;
-        border-radius: .8em;
-    }
-
-    & input:focus:invalid {
-        background: url("/images/invalid.svg") no-repeat 0% 50%;
-        background-size: 2em;
-      }
-    // & input:required:invalid {
-    //     box-shadow: 0px 0px 3px 1px red;
-    //     border-radius: .5em;
-    // }
-    & input:required:focus:valid {
-        background: url("/images/valid.svg") no-repeat 0% 50%;
-        background-size: 2em;
-        
-      }
-    
 }
+.button {
+    background: var(--color-theme-feature-text);
+    color: var(--color-theme-highlight-block);
+    font-weight: 600;
+    font-size: 2.2rem;
+    // margin: .6em;
+    margin-bottom: .6em;
+    border-radius: .4rem;
+    width: 100%;
+    cursor: pointer;
+}
+
+.input_background {
+    background: var(--color-bg);
+    border-radius: .8em;
+    margin-bottom: 1.8em;
+
+}
+button, input[type] {
+    border: none;
+    // margin: 0;
+    font: inherit;
+    line-height: 1;
+    padding-top: .8rem;
+    padding-bottom: .8rem;
+
+    caret-color: var(--color-primary-glare);
+}
+
+.validity_margin {
+    margin-left:-2em;
+    padding-left: 2.5em;
+}
+
+input {
+    background:none;
+    width: 115%; //mozilla 
+    border-radius: .8em;
+    color: var(--color-text);
+}
+
+input:focus {
+    box-shadow: 1px 1px 2px 1px var(--color-text);
+    outline: none;
+    border-radius: .8em;
+}
+
+input:focus:invalid {
+    background: url("/images/invalid.svg") no-repeat 0% 50%;
+    background-size: 2em;
+  }
+// input:required:invalid {
+//     box-shadow: 0px 0px 3px 1px red;
+//     border-radius: .5em;
+// }
+input:required:focus:valid {
+    background: url("/images/valid.svg") no-repeat 0% 50%;
+    background-size: 2em;
+    
+  }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) { 
